--- a/detailed-info.html
+++ b/detailed-info.html
@@ -52,6 +52,9 @@
         </tr>
     </table>
 </div>
+<div>
+      <p id="details"></p>
+</div>
 
 <div id="detailed-info" class="container">
   <div id="overlay">
