--- a/detailed-info.html
+++ b/detailed-info.html
@@ -7,6 +7,8 @@
     <title>Kiadó ingatlan</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="detailed-info.css">
+    <script src="lakasdata.js"></script>
+    <script src="detailed-info.js"></script>
 </head>
 <body>
   <div class="flex-container">
@@ -66,12 +68,7 @@
     <button id="closeBtn">X</button>
     </div>
 </div>
-<div class="card" id="listing-${listing.id}">
-  <!-- Kártya tartalma -->
-</div>
-
-<script src="lakasdata.js"></script>
-<script src="detailed-info.js"></script>
+<div class="card" id="listing-${listing.id}"></div>
 
 <footer class="text-center" style="background-color: #696969">
         <div class="container">
