--- a/index.html
+++ b/index.html
@@ -40,17 +40,17 @@
             <form id="registerForm">
                 <p>Regisztráció</p>
                 <label for="name">Név:</label>
-                <input type="text" id="name" name="name">
+                <input type="text" id="newName" name="name">
                 <label for="newEmail">E-mail:</label>
                 <input type="email" id="newEmail" name="newEmail">
                 <label for="newPassword">Jelszó:</label>
                 <input type="password" id="newPassword" name="newPassword">
-                <label for="againPassword">Jelszó újra:</label>
-                <input type="password" id="againPassword" name="againPassword">
+                <label for="confirmPassword">Jelszó újra:</label> 
+                <input type="password" id="confirmPassword" name="confirmPassword"> 
                 <button type="button" onclick="register()">Regisztráció</button>
             </form>
         </div>
-    </div>
+    </div>    
 
     <div class="modal" id="advertisementPopup">
         <div class="modal-content">
@@ -67,14 +67,14 @@
                 <input type="text" id="rent" name="rent" placeholder="Ft/hó">
                 <label for="name">Név:</label>
                 <input type="text" id="name" name="name">
-                <label for="email">E-mail:</label>
-                <input type="email" id="email" name="email">
+                <label for="adEmail">E-mail:</label>
+                <input type="email" id="adEmail" name="adEmail">
                 <label for="phone">Telefon:</label>
                 <input type="tel" id="phone" name="phone" placeholder="+36701234567">
                 <button type="button" onclick="submitAdvertisement()">Hirdetésfeladás</button>
             </form>
         </div>
-    </div>
+    </div>    
     
     <div class="flex">
         <div class="formBackground">
