--- a/detailed-info.html
+++ b/detailed-info.html
@@ -88,7 +88,7 @@
   
                   <div style="flex: 0 0 24%">
                     <h3 class="text-uppercase font-weight-bold">
-                      <a href="nevezetessegek.html" class="text-white">Díjaink</a>
+                      <a href="nevezetessegek.html" class="text-white">Nevezetességek</a>
                     </h3>
                   </div>
 
